--- a/index.html
+++ b/index.html
@@ -7,7 +7,55 @@
     <title>Secret Agent Supply Inc.</title>
   </head>
   <body>
-    
+    <header>
+      <div class="logo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png"/>
+        <span>SECRET AGENT SUPPLY INC.</span>
+      </div>
+    </header>
+    <div class="main">
+      <div class="main-banner">
+        <div class="main-CTA">
+          <h2>New Arrivals</h2>
+          <h1>Sport Bikes and Motorcycles</h1>
+        </div>
+      </div>
+      <nav>
+        <span>Eyewear</span>
+        <span>Apparel</span>
+        <span>Gadgets</span>
+        <span>Vehicles</span>
+        <span>Classes</span>
+        <span>Contact</span>
+      </nav>
+      <div class="product-grid">
+        <div class="pen">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png"/>
+          <p>Exploding Pen</p>
+        </div>
+        <div class="watch">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png"/>
+          <p>Cellular Watch</p>
+        </div>
+        <div class="glasses">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png"/>
+          <p>Thermal Glasses</p>
+        </div>
+      </div>
+      <div class="location-hours">
+        <div class="location">
+          <h3>Location</h3>
+          <p>-47.346436, 84.32354</p>
+        </div>
+        <div class="hours">
+          <h3>Hours</h3>
+          <p>0800 - 1800</p>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <h3>Copyright Secret Agent Supply Inc.</h3>
+    </footer>
 
   </body>
 </html>
