--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
         <span>SECRET AGENT SUPPLY INC.</span>
       </div>
     </header>
-    <div class="main">
-      <div class="main-banner">
+    <div class="main-banner">
+      <div class="cta-container">
         <div class="main-CTA">
           <h2>New Arrivals</h2>
           <h1>Sport Bikes and Motorcycles</h1>
         </div>
       </div>
-      <nav>
-        <span>Eyewear</span>
-        <span>Apparel</span>
-        <span>Gadgets</span>
-        <span>Vehicles</span>
-        <span>Classes</span>
-        <span>Contact</span>
-      </nav>
-      <div class="product-grid">
+      </div>
+    <nav>
+      <ul class="nav-items">
+        <li>Eyewear</li>
+        <li>Apparel</li>
+        <li>Gadgets</li>
+        <li>Vehicles</li>
+        <li>Classes</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+    <div class="product-grid">
         <div class="pen">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png"/>
           <p>Exploding Pen</p>
@@ -42,7 +45,7 @@
           <p>Thermal Glasses</p>
         </div>
       </div>
-      <div class="location-hours">
+    <div class="location-hours">
         <div class="location">
           <h3>Location</h3>
           <p>-47.346436, 84.32354</p>
@@ -52,7 +55,6 @@
           <p>0800 - 1800</p>
         </div>
       </div>
-    </div>
     <footer>
       <h3>Copyright Secret Agent Supply Inc.</h3>
     </footer>
