--- a/index.html
+++ b/index.html
@@ -30,20 +30,31 @@
         <li>Classes</li>
         <li>Contact</li>
       </ul>
+      <ul class="mobile-nav">
+        <li>Menu</li>
+      </ul>
     </nav>
-    <div class="product-grid">
-        <div class="pen">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png"/>
-          <p>Exploding Pen</p>
+    <div class="grid-container">
+      <div class="product-grid">
+        <div class="product">
+          <div class="product-image">
+           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png"/>
+          </div>
+          <span>Exploding Pen</span>
         </div>
-        <div class="watch">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png"/>
-          <p>Cellular Watch</p>
+        <div class="product">
+          <div class="product-image">
+           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png"/>
+          </div>
+          <span>Cellular Watch</span>
         </div>
-        <div class="glasses">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png"/>
-          <p>Thermal Glasses</p>
+        <div class="product">
+          <div class="product-image">
+           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png"/>
+          </div>
+          <span>Thermal Glasses</span>
         </div>
+      </div>
       </div>
     <div class="location-hours">
         <div class="location">
