Media queries added for device width.

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
     </nav>
     <div class="grid-container">
       <div class="product-grid">
-        <div class="product">
+        <div class="product pen">
           <div class="product-image">
            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png"/>
           </div>
           <span>Exploding Pen</span>
         </div>
-        <div class="product">
+        <div class="product watch">
           <div class="product-image">
            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png"/>
           </div>
           <span>Cellular Watch</span>
         </div>
-        <div class="product">
+        <div class="product glasses">
           <div class="product-image">
            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png"/>
           </div>
@@ -56,18 +56,22 @@
         </div>
       </div>
       </div>
-    <div class="location-hours">
+    <div class="grid-container">
+     <div class="product-grid loc-hours">
         <div class="location">
           <h3>Location</h3>
           <p>-47.346436, 84.32354</p>
         </div>
-        <div class="hours">
+        <div class="location">
           <h3>Hours</h3>
           <p>0800 - 1800</p>
         </div>
       </div>
+    </div>
     <footer>
-      <h3>Copyright Secret Agent Supply Inc.</h3>
+      <div class="copyright-container">
+       <h3>Copyright Secret Agent Supply Inc.</h3>
+    </div>
     </footer>
 
   </body>
